Make AI-Perf benchmark commands non-executable in notebook
Changed AI-Perf code block from bash to plain text:
- Before: ```bash (executable in notebook)
- After: ``` (plain text, not executable)

Why:
- These commands are meant for terminal use only
- AI-Perf is resource-intensive and shouldn't run in notebook
- Prevents accidental execution that could crash kernel
- Users should copy-paste to terminal, not run in notebook

Also updated text:
'Copy and paste these commands into a terminal (not executable in notebook)'

This makes it clear these are reference commands for terminal use,
not interactive notebook cells to execute.

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60205059",
+   "id": "1feb8407",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ab6d55",
+   "id": "aa86c56a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03495afa",
+   "id": "d3a989f4",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26e9144",
+   "id": "9c90ae0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84998614",
+   "id": "3953c3f2",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2a89ef",
+   "id": "c958987b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d29319",
+   "id": "c30f4235",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2ba2176",
+   "id": "b229d598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9baa236b",
+   "id": "b6b62dc7",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24438da6",
+   "id": "df575534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bacdee5",
+   "id": "3dc45e2a",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1169dfda",
+   "id": "3201c611",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd64374",
+   "id": "4e6388ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c9aee80",
+   "id": "05f04b75",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da9614c",
+   "id": "2fd0e02d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813c6b2f",
+   "id": "8121f172",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "970c0a24",
+   "id": "d7684ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c8d363",
+   "id": "98a96117",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8d76a3",
+   "id": "a2590482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b95f32",
+   "id": "de3b42c2",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7aef3b4",
+   "id": "38795fa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c12cf04",
+   "id": "d7aa04cd",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a33c36",
+   "id": "c6a1f192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ab8635",
+   "id": "d2b5c8b0",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ec586a",
+   "id": "3e2febb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dccaa4e",
+   "id": "8aea4b0f",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a5d1c4",
+   "id": "afb5f993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c0d5e5",
+   "id": "acfac150",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0a4f07",
+   "id": "64bf8e20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "839920b2",
+   "id": "136ac032",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9fc97a8",
+   "id": "a84930b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f92c310",
+   "id": "418185e6",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879258ce",
+   "id": "58dc493a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e34a13",
+   "id": "816e2095",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
@@ -959,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45b7e92",
+   "id": "7173ac99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,22 +969,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c339ee",
+   "id": "aed956a7",
    "metadata": {},
    "source": [
     "#### Run Benchmarks in a Terminal\n",
     "\n",
-    "Copy and paste these commands:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e941b461",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
+    "Copy and paste these commands into a terminal (not executable in notebook):\n",
+    "\n",
+    "```\n",
     "# Set up endpoint\n",
     "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "export FRONTEND_URL=\"http://$NODE_IP:30200\"\n",
@@ -1015,14 +1007,9 @@
     "  --endpoint-type chat \\\n",
     "  --streaming \\\n",
     "  --request-rate 10 \\\n",
-    "  --request-count 200"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "606ca617",
-   "metadata": {},
-   "source": [
+    "  --request-count 200\n",
+    "```\n",
+    "\n",
     "#### What to Observe\n",
     "\n",
     "- TTFT (Time To First Token) - lower is better\n",
@@ -1064,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c75ca5",
+   "id": "7ecaf007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291d7337",
+   "id": "0b0fbc0e",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1096,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56d70ac",
+   "id": "a51c5244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2bb15c8",
+   "id": "2a975890",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1129,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ef43c8c",
+   "id": "83bba31a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2dc305",
+   "id": "afc55aaf",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1187,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f3da5a8",
+   "id": "40fdac0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a4ed8a",
+   "id": "f67ba368",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1215,7 +1202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccac5d60",
+   "id": "378eb22b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea1501b",
+   "id": "e68d3d41",
    "metadata": {},
    "source": [
     "---\n",
@@ -1257,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f23fef",
+   "id": "7ba48c60",
    "metadata": {},
    "source": [
     "### Community Resources\n",
