Make pip install command non-executable in notebook
Changed pip install code block from bash to plain text:
- Before: ```bash pip install -q aiperf
- After: ``` pip install -q aiperf

Updated text:
- 'If not already installed:' → 'If not already installed, run in a terminal:'

Consistency:
- Matches the benchmark commands (also non-executable)
- All AI-Perf commands are now display-only
- Users must run in terminal, not in notebook

This prevents pip installs in the notebook environment which could:
- Pollute notebook kernel dependencies
- Cause version conflicts
- Install packages in wrong location

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1feb8407",
+   "id": "04db2f83",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa86c56a",
+   "id": "df829f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3a989f4",
+   "id": "4185bd55",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c90ae0e",
+   "id": "2c77a8fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3953c3f2",
+   "id": "eec73eec",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c958987b",
+   "id": "deceb4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30f4235",
+   "id": "cd876357",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b229d598",
+   "id": "94a3db29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b62dc7",
+   "id": "1a6aac37",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df575534",
+   "id": "480114b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc45e2a",
+   "id": "ac6fd4bc",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3201c611",
+   "id": "d68e3d58",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6388ab",
+   "id": "029fbdb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f04b75",
+   "id": "10bd33a4",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd0e02d",
+   "id": "9c45d928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8121f172",
+   "id": "3b35471b",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7684ba3",
+   "id": "341251f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a96117",
+   "id": "652e69ff",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2590482",
+   "id": "b9d37ea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3b42c2",
+   "id": "55fa13fc",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38795fa0",
+   "id": "a368d485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7aa04cd",
+   "id": "4065ef8b",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a1f192",
+   "id": "d78a134d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b5c8b0",
+   "id": "e1b5de76",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e2febb6",
+   "id": "397a1e5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aea4b0f",
+   "id": "e93dbb7a",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb5f993",
+   "id": "f1057c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acfac150",
+   "id": "64a22cc5",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64bf8e20",
+   "id": "5715d99b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136ac032",
+   "id": "1e636dba",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84930b3",
+   "id": "7dee21c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "418185e6",
+   "id": "488d8b4e",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58dc493a",
+   "id": "3065971a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,30 +948,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "816e2095",
+   "id": "d6e22cfe",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
     "\n",
-    "If not already installed:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7173ac99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "pip install -q aiperf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aed956a7",
-   "metadata": {},
-   "source": [
+    "If not already installed, run in a terminal:\n",
+    "\n",
+    "```\n",
+    "pip install -q aiperf\n",
+    "```\n",
+    "\n",
     "#### Run Benchmarks in a Terminal\n",
     "\n",
     "Copy and paste these commands into a terminal (not executable in notebook):\n",
@@ -1051,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ecaf007",
+   "id": "0c25bebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b0fbc0e",
+   "id": "a9fa7c66",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1083,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51c5244",
+   "id": "61202e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a975890",
+   "id": "2f038043",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1116,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bba31a",
+   "id": "ca5da11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc55aaf",
+   "id": "dc54b2f0",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1174,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40fdac0d",
+   "id": "04fff861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67ba368",
+   "id": "9715aa6c",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1202,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "378eb22b",
+   "id": "011f446f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e68d3d41",
+   "id": "8ccd3313",
    "metadata": {},
    "source": [
     "---\n",
@@ -1244,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ba48c60",
+   "id": "f89b2540",
    "metadata": {},
    "source": [
     "### Community Resources\n",
