Add --enable-local-indexer flag to worker configuration
Critical fix for KV-aware routing to work properly.

Added flag to worker args:
- Before: --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1 --enable-prefix-caching
- After:  --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1 --enable-prefix-caching --enable-local-indexer true

What this flag does:
- Enables local KV cache indexing for each worker
- Required for workers to publish cache events to NATS
- Allows router to track which workers have which prefixes cached
- Essential for KV-aware routing to function

Without this flag:
- Workers don't publish KV events
- Router can't make cache-aware routing decisions
- KV-aware routing doesn't work even though configured

This was discovered during testing and is required for the lab to work.

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b90af512",
+   "id": "58951249",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab255dd",
+   "id": "502b4acf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b27e9b7",
+   "id": "489bc563",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ea0997",
+   "id": "116c26dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60ac1872",
+   "id": "8af625f6",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e71b573",
+   "id": "0ab5da9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045ab1bc",
+   "id": "4f29c0f0",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3d4070",
+   "id": "b7748d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62ac017",
+   "id": "0a353f34",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1470f498",
+   "id": "daaf310c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3de7edb",
+   "id": "6e19b753",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dca673e",
+   "id": "088c79fa",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "759630a6",
+   "id": "8d80daf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b0f2b6",
+   "id": "3b670f71",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e485a8",
+   "id": "a5121dcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d18dbefb",
+   "id": "5ff540b1",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2910e190",
+   "id": "51c1edc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f5fe5c7",
+   "id": "b7ec4b32",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d1ece2",
+   "id": "584831be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
     "            - /bin/sh\n",
     "            - -c\n",
     "          args:\n",
-    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1 --enable-prefix-caching\n",
+    "            - python3 -m dynamo.vllm --model Qwen/Qwen2.5-1.5B-Instruct --tensor-parallel-size 1 --enable-prefix-caching --enable-local-indexer true\n",
     "EOF\n",
     "\n",
     "echo \"\"\n",
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b262ab",
+   "id": "9eb54f46",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acaf2df",
+   "id": "846853f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1584c73a",
+   "id": "0546487f",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c79184c8",
+   "id": "f5c17db3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9da74c",
+   "id": "343b9274",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1042d742",
+   "id": "06d17c87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5469efbd",
+   "id": "a7e90129",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d390195",
+   "id": "a6eafb37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860a175b",
+   "id": "d0ca550c",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa00f2b",
+   "id": "da7040c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d8f49e",
+   "id": "811bb710",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d289df64",
+   "id": "a2113be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71528b2d",
+   "id": "6f776490",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb07403",
+   "id": "ecdc09b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5eef22",
+   "id": "2b809de9",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc43c4eb",
+   "id": "73215c52",
    "metadata": {},
    "source": [
     "### Community Resources\n",
