Add retry logic to oneshot.sh and router logs to Lab 3
oneshot.sh:
- Added retry wrapper for kube-prometheus-stack Helm install
- 3 attempts with 10-second delays between retries
- Added --timeout 10m to give Helm more time
- Provides manual retry command if all attempts fail
- Prevents script from exiting on transient network/image pull errors

Lab 3 (03-kv-aware-routing):
- Added router scheduler logs to 'What to Observe' section
- Shows actual routing decisions with logit scores
- Explains how cached blocks reduce scores (lower = higher priority)
- Provides kubectl command to check frontend logs
- Gives concrete proof that KV-aware routing is working

Example logs users will see:
- 'with 1 cached blocks: 1.438' (cache hit - lower score)
- 'with 0 cached blocks: 2.438' (cache miss - higher score)
- 'Selected worker: ... cached blocks: 1' (router chose cached worker)

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58951249",
+   "id": "ac39aa1b",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502b4acf",
+   "id": "4dbe9481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "489bc563",
+   "id": "4f90275f",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116c26dc",
+   "id": "e5873516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af625f6",
+   "id": "8cac60f8",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab5da9a",
+   "id": "2a7fd86a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f29c0f0",
+   "id": "4c34b692",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7748d7e",
+   "id": "22745f60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a353f34",
+   "id": "40c4e555",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daaf310c",
+   "id": "f13b3a19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e19b753",
+   "id": "3657bb44",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088c79fa",
+   "id": "ad98ed71",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d80daf1",
+   "id": "12eb63fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b670f71",
+   "id": "38898a5e",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5121dcf",
+   "id": "4fa2edfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff540b1",
+   "id": "45677545",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c1edc4",
+   "id": "bce9f3c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7ec4b32",
+   "id": "b1b175eb",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "584831be",
+   "id": "50392909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eb54f46",
+   "id": "68c87349",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846853f4",
+   "id": "fb144781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0546487f",
+   "id": "4f2dd77f",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5c17db3",
+   "id": "a5a8c267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343b9274",
+   "id": "458f647d",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d17c87",
+   "id": "f96cd87b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e90129",
+   "id": "63ea2f35",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6eafb37",
+   "id": "f000ddbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0ca550c",
+   "id": "d1ad17d5",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da7040c1",
+   "id": "1ee6cd19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811bb710",
+   "id": "88cd869c",
    "metadata": {},
    "source": [
     "**Understanding the Output:**\n",
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2113be2",
+   "id": "86a38485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f776490",
+   "id": "05e3c397",
    "metadata": {},
    "source": [
     "2. Verify the NodePort service is accessible:"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecdc09b9",
+   "id": "197172d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b809de9",
+   "id": "ae116182",
    "metadata": {},
    "source": [
     "#### Install AI-Perf\n",
@@ -999,9 +999,34 @@
     "\n",
     "#### What to Observe\n",
     "\n",
-    "- TTFT (Time To First Token) - lower is better\n",
-    "- Request throughput - higher concurrency should utilize both workers\n",
-    "- At high concurrency, check frontend logs to see requests distributed across both workers\n",
+    "- **TTFT (Time To First Token)** - lower is better\n",
+    "- **Request throughput** - higher concurrency should utilize both workers\n",
+    "- **Router decision logs** - Check frontend logs to see KV-aware routing in action:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cb83958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "kubectl logs -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend --tail=50 | grep \"scheduler\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f205529",
+   "metadata": {},
+   "source": [
+    "Look for lines showing:\n",
+    "- `Formula for worker_id=... with 1 cached blocks: 1.438` (cache hit - lower score)\n",
+    "- `Formula for worker_id=... with 0 cached blocks: 2.438` (cache miss - higher score)\n",
+    "- `Selected worker: worker_id=... cached blocks: 1` (router chose worker with cache)\n",
+    "\n",
+    "The router prefers workers with lower \"logit\" scores, and cached blocks reduce the score, so workers with cached prefixes get selected!\n",
     "\n",
     "#### Troubleshooting\n",
     "\n",
@@ -1042,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73215c52",
+   "id": "49338796",
    "metadata": {},
    "source": [
     "### Community Resources\n",
